--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am Leni Yang(杨乐妮), a PhD student in the Department of Computer Science and Engineering at the Hong Kong University of Science and Technology, under the supervision of <a href="http://huamin.org/">Prof.Qu Huamin.</a> Before that, I obtained my B.Eng. degree from the University of Electronic Science and Technology of China in June,2018.
+								<p>I am Leni Yang(杨乐妮), a PhD student in the Department of Computer Science and Engineering at the Hong Kong University of Science and Technology, under the supervision of <a href="http://huamin.org/">Prof.Qu Huamin.</a> Before that, I obtained my Bachelor in Information Management System degree from the University of Electronic Science and Technology of China in June,2018.
                   </br>
 									My research interest lies in Data Visualization, especially for Data Journalism.</p>
 									<span class="contact">Contact: lyangbb (at) connect.ust.hk</span>
