add new publications
add the publication of clouddet

--- a/index.html
+++ b/index.html
@@ -149,7 +149,43 @@
 				</div>
 			</div>
 		</div>
-
+		<div id="conference">
+			<div class="container">
+				<div class="row text-center">
+					<h2 class="bold">Publication</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="rotate">
+							<h2 class="heading">Publication</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row" id="cloudet">
+					<div class="col-md-5 project-img">
+						<div class="item">
+							<a href="http://vis.cse.ust.hk/groups/pulse/">
+							<img width="200px" style="float:left" class=" img-responsive rounded pub_teaser" src="images/clouddet.png">
+						</a>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="desc">
+							<p>
+								<!-- <img src="img/clouddet.png" > -->
+								<span class="pub_title">CloudDet: Interactive Visual Analysis of Anomalous Performances in<br> Cloud Computing Systems</span>
+								<br>
+								<span class="pub_authors">Ke Xu, Yun Wang,<span class="pub_me">Leni Yang</span>, Yifang Wang, Bo Qiao, Si Qin, Yong Xu, Haidong Zhang, Huamin Qu</span>
+								<br>
+								<span class="pub_type"><span class="label label-default">TVCG</span> <span class="pub_type"><span class="label label-default">VAST</span> IEEE Transactions on Visualization and Computer Graphics, 2019</span>
+								<br>
+								<span class="pub_downloads" id="moocad_pre">Download: [<a href="https://arxiv.org/pdf/1907.13187.pdf">pdf</a>][<a href="https://youtu.be/NChvp-0SbIc">video</a>]</span>
+							</span></p>
+						</div>
+					</div>
+				</div>
+			</div>
+	</div>
 		<div id="blog">
 			<div class="container">
 				<div class="row text-center">
@@ -202,6 +238,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</footer>
 
+	
+	
 	</div>
 
 	<!-- jQuery -->
