--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 				</div>
 			</div>
 		</div>
+		</div>
 		<div id="conference">
 			<div class="container">
 				<div class="row text-center">
