--- a/index.html
+++ b/index.html
@@ -150,36 +150,36 @@
 			    </div>
 		    </div>
 		</div>
-		<div id="project">
+		<div id="Publication">
 				<div class="container">
 					<div class="row text-center">
-						<h2 class="bold">Projects</h2>
+						<h2 class="bold">Publication</h2>
 					</div>
 					<div class="row">
 						<div class="col-md-12">
 							<div class="rotate">
-								<h2 class="heading">Projects</h2>
+								<h2 class="heading">Publication</h2>
 							</div>
 						</div>
-						<div class="row" id="project-pulse">
+						<div class="row" id="cloudet">
 							<div class="col-md-5 project-img">
 								<div class="item">
-								<a href="http://vis.cse.ust.hk/groups/pulse/">
-								<img class="img-responsive rounded img-thumbnail" src="images/project-pulse.jpg">
+								<a href="https://arxiv.org/pdf/1907.13187.pdf">
+								<img class="img-responsive rounded img-thumbnail" src="images/cloudet.png">
 								</a>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="desc">
 									<p>
-									<a href="http://vis.cse.ust.hk/groups/pulse/" class="btn btn-primary btn-outline">Pulse of HKUST</a>
-									</br>
-									Pulse of HKUST aims to promote a smart campus which supports effective and smart decision-makings through the combined power of IoT devices, big data, and AI.
-									</br>
-									<span class="footer-news">
-									Recent News: Our project won the Student Innovation Gold Award, Hong Kong ICT Awards 2019 and was exhibited at the HKTDC International ICT Expo 2019.
-									</span>
-									</p>
+										<span class="pub_title">CloudDet: Interactive Visual Analysis of Anomalous Performances in<br> Cloud Computing Systems</span>
+										<br>
+										<span class="pub_authors">Ke Xu, Yun Wang, <span class="pub_me">Leni Yang</span> Yifang Wang, Bo Qiao, Si Qin, Yong Xu, Haidong Zhang, Huamin Qu</span>
+										<br>
+										<span class="pub_type"><span class="label label-default">TVCG</span> <span class="pub_type"><span class="label label-default">VAST</span> IEEE Transactions on Visualization and Computer Graphics, 2019</span>
+										<br>
+										<span class="pub_downloads" id="moocad_pre">Download: [<a href="https://arxiv.org/pdf/1907.13187.pdf">pdf</a>][<a href="https://youtu.be/NChvp-0SbIc">video</a>]</span>
+									</span></p>
 								</div>
 							</div>
 						</div>
