--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			    </div>
 		    </div>
 		</div>
-		<div id="Publication">
+		<div id="publication">
 				<div class="container">
 					<div class="row text-center">
 						<h2 class="bold">Publication</h2>
