--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<div class="col-md-5 project-img">
 								<div class="item">
 								<a href="https://arxiv.org/pdf/1907.13187.pdf">
-								<img class="img-responsive rounded img-thumbnail" src="images/cloudet.png">
+								<img class="img-responsive rounded img-thumbnail" width = "200px" src="images/cloudet.png">
 								</a>
 								</div>
 							</div>
@@ -174,7 +174,7 @@
 									<p>
 										<span class="pub_title">CloudDet: Interactive Visual Analysis of Anomalous Performances in<br> Cloud Computing Systems</span>
 										<br>
-										<span class="pub_authors">Ke Xu, Yun Wang, <span class="pub_me">Leni Yang</span> Yifang Wang, Bo Qiao, Si Qin, Yong Xu, Haidong Zhang, Huamin Qu</span>
+										<span class="pub_authors">Ke Xu, Yun Wang, <span class="pub_me">Leni Yang</span>, Yifang Wang, Bo Qiao, Si Qin, Yong Xu, Haidong Zhang, Huamin Qu</span>
 										<br>
 										<span class="pub_type"><span class="label label-default">TVCG</span> <span class="pub_type"><span class="label label-default">VAST</span> IEEE Transactions on Visualization and Computer Graphics, 2019</span>
 										<br>
