--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<div class="col-md-5 project-img">
 								<div class="item">
 								<a href="https://arxiv.org/pdf/1907.13187.pdf">
-								<img class="img-responsive rounded img-thumbnail" width = "200px" src="images/cloudet.png">
+								<img class="img-responsive rounded img-thumbnail" src="images/cloudet.png">
 								</a>
 								</div>
 							</div>
