--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="vis2019.html" class="blog-img">
+									<a href="vis2019.html">
 										<img class="img-responsive" src="images/vis2019.jpg">
 										<div class="overlay"></div>
 										<div class="link">
