--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="row animate-box">
-					<div class="owl-carousel1">
+				<div class="row">
+					<div class="container">
 						<div class="item">
 							<div class="col-md-12">
 								<div class="article">
-									<a href="vis2019.html">
+									<a href="vis2019.html" class="blog-img">
 										<img class="img-responsive" src="images/vis2019.jpg">
 										<div class="overlay"></div>
 										<div class="link">
