--- a/exp-vis2020.html
+++ b/exp-vis2020.html
@@ -62,7 +62,7 @@
 <script>
 $(document).ready(function(){
     //$('#exp-img').hide();
-    var curr_img_src = "vis/exp1.PNG"
+    var curr_img_src = "vis/test.PNG"
     
     //change the exposure time
     $( "#exp-slider" ).slider({
