--- a/exp-vis2020.html
+++ b/exp-vis2020.html
@@ -21,7 +21,7 @@
     border-radius: 5px; text-align: center; padding: 10px;">
 
     <div id="tg-search-div" style="border:1px solid #000; margin-top: 10px; text-align: center; height: 450px; width: 100%">
-        <img id = "exp-img" src="vis/fix.PNG" style="max-width: 100%; max-height: 100%; vertical-align: middle;">
+        <img id = "exp-img" src="vis/fix.PNG" style="visibility:hidden;max-width: 100%; max-height: 100%; vertical-align: middle;">
     </div>
 
     <form>
