--- a/exp-vis2020.html
+++ b/exp-vis2020.html
@@ -57,6 +57,7 @@
 
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.js"></script>
+<script src="expjs.js"></script>
 
 <!-- pilot experiments script -->
 <script>
