--- a/pre-experiment.html
+++ b/pre-experiment.html
@@ -1289,7 +1289,7 @@
         dark blue ( outer node
         has more influence) to white (the center and outer node’ influence is equal) to dark red ( the center node has more influence). The size of a node is proportional to the sum of influence. </span></p>
     <center class="half">
-      <img width="600" src=".\pre-exp-file\contrast flower1-1.png"><img width="600" src=".\pre-exp-file\contrast flower2-1.png">
+      <img width="600" src=".\pre-exp-file\contrast-flower1-1.PNG"><img width="600" src=".\pre-exp-file\contrast-flower2-1.PNG">
       <br>
       <div style="padding: 2px;"><span style="font-weight:bold">Figure2:</span> Comparing Influence Flower of Ben Shneiderman in three time periods. Top: 1971 to 1999. Bottom: 2000 to 2009. Grey background: anchor flower from 1971 to 2018.</div>
     </center>
