--- a/pre-experiment.html
+++ b/pre-experiment.html
@@ -1298,7 +1298,7 @@
         period of the anchor is always the superset of all influence flowers – here the entire time range. The anchor is greyed out in the background, and an influence flower is drawn in color on top of the anchor flower.</span></p>
     <h4><a name="23-findings" class="md-header-anchor"></a><span>2.3 Findings</span></h4>
     <center class="half">
-      <img width="600" src=".\pre-exp-file\contrast flower1-1.png"><img width="600" src=".\pre-exp-file\contrast flower2-1.png">
+      <img width="600" src=".\pre-exp-file\contrast-flower1-1.PNG"><img width="600" src=".\pre-exp-file\contrast-flower2-1.PNG">
       <br>
       <div style="padding: 2px;"><span style="font-weight:bold">Figure2:</span> Comparing Influence Flower of Ben Shneiderman in three time periods. Top: 1971 to 1999. Bottom: 2000 to 2009. Grey background: anchor flower from 1971 to 2018.</div>
     </center>
