up date experiment material
make the guideline of presentation and recording more easier

--- a/pre-experiment.html
+++ b/pre-experiment.html
@@ -1271,7 +1271,7 @@
             <li> <span> In the presentation, you would give a <strong>brief introduction</strong>, <strong>explain the visuail encoding</strong> and <strong>tell the findings</strong> in the visualization. <a href=".\pre-exp-file\Name-SID.pptx"><span>Click
                     to download the PPT template</span></a></span></li>
             <li> <span> You can use the pictures provided in the material but not the text.</span></li>
-            <li> <span> A guideline on how to present the visualization would be provided. Please try to utilize it.</span></li>
+            <li> <span> Some suggestions of how to present a visualization is given, you could utilize what you think useful.</span></li>
             <li> <span> The length of the slide show should be </span><strong><span>less than 3 minutes.</span></strong></li>
             <li> <span> After you finishing the slides, you can go to Section 4 to see how to record the slide show.</span></li>
           </ul>
@@ -1326,17 +1326,17 @@
             Shneiderman had more influences on others than that of others on him (more red nodes and edges).
           </span><strong><span>Catherine is the largest node in both flowers.</span></strong><span> For Shneiderman, </span><strong><span>Catherine bore more outgoing influence before 2000 (red), the
               influence almost equalized in the 2000s (white)</span></strong><span>. </p>
-        <h3><a name="3-presentation-guideline" class="md-header-anchor"></a><span>3. Presentation guideline</span></h3>
+        <h3><a name="3-presentation-suggestions" class="md-header-anchor"></a><span>3. Presentation Suggestions</span></h3>
         <h4><a name="31-when-explaining-the-visual-encoding" class="md-header-anchor"></a><span>3.1 When explaining the visual encoding</span></h4>
         <ul>
           <li><span>Give concrete examples to make your explanation more clear. You can say something like “in this bar chart each bar presents…, for instance, this bar is…”.</span></li>
-          <li><span>Add text labels or legend to the slides to help explain the visual encoding</span></li>
+          <li><span>Add concise text or legend to the slides to help explain the visual encoding</span></li>
         </ul>
         <h4><a name="32-when-telling-the-findings" class="md-header-anchor"></a><span>3.2 When telling the findings</span></h4>
         <ul>
-          <li><span>Make sure the audience know which region of the visualization you are talking about</span></li>
+          <li><span>Guide audiences' attention to the region of the visualization you are talking about.</span></li>
           <li><span>Explicitly tell what do you see in the visulization supports the findings </span></li>
-          <li><span>You can explain the visual encoding again to explain the findings</span></li>
+          <li><span>Help audiences recall related visual encoding to help them understanding the findings</span></li>
         </ul>
         <h3><a name="4-record-the-slide-show" class="md-header-anchor"></a><span>4. Record the slide show</span></h3>
         <p><span>Here is the instruction of how to record the slide show. Different from the top vis competition, you don&#39;t have to export the video, you can directly upload the slide show file with the narration, unless you use the screen
@@ -1366,36 +1366,13 @@
             <p><span>Some earlier versions of PPT would have a recording interface like this image with a widget at the top-left corner. In this case, please check this website to know how to control the recording. </span><a href='https://support.office.com/en-us/article/video-record-presentations-2570dff5-f81c-40bc-b404-e04e95ffab33'
                 target='_blank' class='url'>https://support.office.com/en-us/article/video-record-presentations-2570dff5-f81c-40bc-b404-e04e95ffab33</a><span> After that, go to upload the file.</span></p>
           </li>
-          <li>
-            <center>
-              <img width="350px" src=".\guide-record-video\ppt-version1.png">
-            </center>
-          </li>
-          <li>
-            <p><span>If your recording interface looks like this one, please continue reading.</span></p>
-            <center>
-              <img width="350px" src=".\guide-record-video\ppt-version2.png">
-            </center>
-          </li>
         </ul>
-        <h5><a name="to-record-one-slide" class="md-header-anchor"></a><span>To record one slide</span></h5>
+        <h5><a name="the-recording-interface" class="md-header-anchor"></a><span>The recording interface</span></h5>
+        <p><span>The recording interface is simple and intuitive and almost all functions are shown in the picture. To use the </span><strong><span>PowerPoint&#39;s laser pointer </span></strong><span>, you need to </span><strong><span>hold down the
+              [Ctrl] key</span></strong><span> and </span><strong><span>drag the mouse (while holding down both the [Ctrl] and the left mouse button)</span></strong><span> to point to specific objects and text on the slide.</span></p>
         <center>
-          <img width="600px" src=".\guide-record-video\ppt2.PNG"></center>
-        <p><span> You can click:</span></p>
-        <ul>
-          <li><strong><span>Record</span></strong><span> - to start the recording of this slide. The timer counts down from 3 before recording begins.</span></li>
-          <li><strong><span>Stop</span></strong><span> - to end the recording of this slide</span></li>
-          <li><strong><span>Reply</span></strong><span> - to reply what you recorded</span></li>
-          <li><strong><span>Clear</span></strong><span> - to clear what you recorded in this slide.</span></li>
-        </ul>
-        <p><span> If you add any animation to this slide, it can still be triggered and played as usual during the recording.</span></p>
-        <p><span> Some other useful functions:</span></p>
-        <center>
-          <img width="600px" src=".\guide-record-video\ppt3.PNG"></center>
-        <ul>
-          <li><span>Click </span><strong><span>&quot;NOTES&quot;</span></strong><span> to show the notes you write in this slide. You can write some key words or the manuscript for your presentation.</span></li>
-          <li><span>At the bottom-left corner, there is the time information.</span></li>
-        </ul>
+          <img width="600px" src=".\guide-record-video\ppt5.PNG"></center>
+        <p><span> </span></p>
         <h5><a name="to-record-the-next-slide" class="md-header-anchor"></a><span>To record the next slide</span></h5>
         <p><span>After finishing the recording of one slide, to record next one, you can:</span></p>
         <ul>
@@ -1404,8 +1381,7 @@
         </ul>
         <h5><a name="to-change-the-recording-of-a-specific-slide" class="md-header-anchor"></a><span>To change the recording of a specific slide</span></h5>
         <p><span>If you closed the recording interface and wish to re-record narration for a slide, navigate to the slide you wish to rerecord and click </span><strong><span>Slide Show</span></strong><span>&gt; </span><strong><span>Record Slide Show
-            </span></strong><span>&gt;</span><strong><span>Start Recording from Current Slide</span></strong><span>. Click the </span><strong><span>clear</span></strong><span> button to clear the previous narration. When you are ready to record,
-            click
+            </span></strong><span>&gt;</span><strong><span>Start Recording from Current Slide</span></strong><span>. Click the </span><strong><span>clear</span></strong><span> button to clear the previous narration. When you are ready to record, click
           </span><strong><span>Record</span></strong><span> to begin a new recording. Click </span><strong><span>Stop</span></strong><span> to end the recording.</span></p>
         <h5><a name="412-upload-the-file" class="md-header-anchor"></a><span>4.1.2 Upload the file</span></h5>
         <p><span>Now, if you click </span><strong><span>Slide Show</span></strong><span> &gt; </span><strong><span>From the beginning</span></strong><span>, the slide would play automatically like a video. Please upload your slide show file through
