update pre experiments
make the guideline more clear

--- a/pre-experiment.html
+++ b/pre-experiment.html
@@ -1258,21 +1258,33 @@
   <div id='write' class='is-node'>
     <h2><a name="presenting-visualization" class="md-header-anchor"></a><span>Presenting Visualization</span></h2>
     <h3><a name="1-overview" class="md-header-anchor"></a><span>1. Overview</span></h3>
-    <p><span>The experiments have two parts:
+    <p><span>The experiment has two parts:
         <ol>
-          <li><span>Part I:</span></li>
+          <li><span><strong>Part I: 15 minutes</strong></span></li>
           <ul>
-            <li><span>Read and understand a material that introduces a data visualization including its visual encoding and some findings in the visualization.</span></li>
-            <li><span>You have most 15 minutes to read the material. You can also end the reading early.</span></li>
+            <li><span>The first part has 15 minutes</span></li>
+            <li><span>You would read and understand a material that introduces a data visualization including its visual encoding and some findings in it.</span></li>
+            <li><span>After 15 minutes, text would be hidden with pictures remain</span></li>
           </ul>
-          <li><span>Part II:</span></li>
+          <li><span><strong>Part II: 60 minutes</strong></span></li>
           <ul>
-            <li> <span> Record a slide show to present the visualization you see in the first part using your own words. Showing up in the recording is not required.</span></li>
-            <li> <span> In the presentation, you would give a <strong>brief introduction</strong>, <strong>explain the visuail encoding</strong> and <strong>tell the findings</strong> in the visualization. <a href=".\pre-exp-file\Name-SID.pptx"><span>Click
-                    to download the PPT template</span></a></span></li>
-            <li> <span> You can use the pictures provided in the material but not the text.</span></li>
-            <li> <span> Some suggestions of how to present a visualization is given, you could utilize what you think useful.</span></li>
-            <li> <span> The length of the slide show should be </span><strong><span>less than 3 minutes.</span></strong></li>
+            <li> <span>The first part has 60 minutes and you can finish it earlier</span></li>
+            <li> <span> You would record a slide show to present the visualization you see in the first part</li>
+            <li> <span> <strong>The presentation content:</strong></li>
+              <ul>
+                <li><span>a brief introduction</span></li>
+                <li><span>explain the visuail encoding</span></li>
+                <li><span>tell the findings</span></li>
+                <li><a href=".\pre-exp-file\Name-SID.pptx"><span>Click to download the PPT template</span></a></li>
+              </ul>
+              <li> <span> <strong>The presentation requirements:</strong></li>
+                <ul>
+                  <li><span>The length is less than 3 minutes</span></li>
+                  <li><span>The target audiences is the general public, try to make it simple and clear</span></li>
+                  <li><span>Use your own words. You can use the pictures provided in the material</span></li>
+                  <li><span>No need to make it perfect. Record each slide for 2-3 times should be enough.</span></li>
+                </ul>
+            <li> <span> Some suggestions of how to present a visualization are given, you could utilize what you think useful.</span></li>
             <li> <span> After you finishing the slides, you can go to Section 4 to see how to record the slide show.</span></li>
           </ul>
         </ol>
