--- a/pre-experiment.html
+++ b/pre-experiment.html
@@ -1320,7 +1320,7 @@
           <br>
           <div style="padding: 2px;"><span style="font-weight:bold">Figure2:</span> Comparing Influence Flower of Ben Shneiderman in three time periods. Top: 1971 to 1999. Bottom: 2000 to 2009. Grey background: anchor flower from 1971 to 2018.</div>
         </center>
-        <p class="text-material"><strong><span>Contrast Flower.</span></strong><span> To compare multiple influence flowers generated at different time periods, we created the concept of an anchor flower. The anchor flower and influence flowers
+        <p class="text-material"><strong><span>Anchor Flower.</span></strong><span> To compare multiple influence flowers generated at different time periods, we created the concept of an anchor flower. The anchor flower and influence flowers
             share
             the same nodes. The time
             period of the anchor is always the superset of all influence flowers – here the entire time range. The anchor is greyed out in the background, and an influence flower is drawn in color on top of the anchor flower. The anchor flower
