--- a/pre-experiment.html
+++ b/pre-experiment.html
@@ -1341,13 +1341,13 @@
         <h3><a name="3-presentation-suggestions" class="md-header-anchor"></a><span>3. Presentation Suggestions</span></h3>
         <h4><a name="31-when-explaining-the-visual-encoding" class="md-header-anchor"></a><span>3.1 When explaining the visual encoding</span></h4>
         <ul>
-          <li><span>Give concrete examples to make your explanation more clear. You can say something like “in this bar chart each bar presents…, for instance, this bar is…”.</span></li>
+          <li><span>Give concrete examples to make your explanation clearer. You can say something like “in this bar chart each bar presents…, for instance, this bar is…”.</span></li>
           <li><span>Add concise text or legend to the slides to help explain the visual encoding</span></li>
         </ul>
         <h4><a name="32-when-telling-the-findings" class="md-header-anchor"></a><span>3.2 When telling the findings</span></h4>
         <ul>
           <li><span>Guide audiences' attention to the region of the visualization you are talking about.</span></li>
-          <li><span>Explicitly tell what do you see in the visulization supports the findings </span></li>
+          <li><span>Explicitly tell what do you see in the visualization supports the findings </span></li>
           <li><span>Help audiences recall related visual encoding to help them understanding the findings</span></li>
         </ul>
         <h3><a name="4-record-the-slide-show" class="md-header-anchor"></a><span>4. Record the slide show</span></h3>
