update the publication

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Leni Yang</title>
@@ -9,12 +10,12 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -48,8 +49,9 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 	<nav id="colorlib-main-nav" role="navigation">
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
@@ -86,29 +88,109 @@
 					<h2 class="bold">Welcome</h2>
 				</div>
 				<div class="row">
-					<div class="col-md-5">
-							<div class="item">
-								<img class="img-responsive about-img" src="images/about.jpg">
-							</div>
+					<div class="col-md-4">
+						<div class="item">
+							<img class="img-responsive" src="images/about.jpg">
+						</div>
 					</div>
-					<div class="col-md-6">
-						<div class="about-desc col-md-push-1">
-								<!-- <div class="item">
-									<h2><span>Leni Yang</span></h2>
-								</div> -->
+					<div class="col-md-8">
+						<div class="about-desc">
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>I am Leni Yang(杨乐妮), a PhD student in the Department of Computer Science and Engineering at the Hong Kong University of Science and Technology, under the supervision of <a href="http://huamin.org/">Prof.Qu Huamin.</a> Before that, I obtained my Bachelor in Information Management System degree from the University of Electronic Science and Technology of China in June,2018.
-                  </br>
-									My research interest lies in Data Visualization, especially for Data Journalism.</p>
-									<span class="contact">Contact: lyangbb (at) connect.ust.hk</span>
+								<p>I am Leni Yang(杨乐妮), a PhD student in the Department of Computer Science and
+									Engineering at the Hong Kong University of Science and Technology, under the
+									supervision of <a href="http://huamin.org/">Prof.Qu Huamin.</a> Before that, I
+									obtained my Bachelor in Information Management System degree from the University of
+									Electronic Science and Technology of China in June, 2018.
+									</br>
+									My research interest lies in Data Visualization. My mission is to increase the
+									accessibility of data visualizations to the general public.
+									My research attempts to lower the barrier to understanding data visualization and to
+									improve the effectiveness of data storytelling.</p>
+								<span class="contact">Contact: lyangbb (at) connect.ust.hk</span>
 								<p class="colorlib-social-icons">
 									<a href="https://github.com/YLeni"><i class="icon-github"></i></a>
 									<a href="mailto:lyangbb@connect.ust.hk"><i class="icon-mail"></i></a>
 								</p>
 							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="publication">
+			<div class="container">
+				<div class="row text-center">
+					<h2 class="bold">Publication</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="rotate">
+							<h2 class="heading">Publication</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-2" id="pyramid">
+					<div class="col-md-4 col-xs-12">
+						<div class="item">
+							<a href="index.html">
+								<img class="img-thumbnail" src="images/freytag-space.png">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-8 col-xs-12">
+						<div class="desc">
+							<p>
+								<span class="pub_title">A design space for applying the Freytag's Pyramid structure
+									to data stories</span>
+								<br>
+								<span class="pub_authors"><span class="pub_me">Leni Yang</span>, Xian Xu, Xingyu
+									Lan,
+									Ziyan Liu, Shunan Guo, Yang Shi, Huamin Qu, Nan Cao</span>
+								<br>
+								<span class="pub_type"><span class="label label-default">TVCG</span> <span
+										class="pub_type"><span class="label label-default">InfoVis</span> IEEE
+										Transactions on Visualization and Computer Graphics (IEEE Vis2021)</span>
+									<br>
+									<span class="pub_downloads" id="moocad_pre">Download: [<a href="index.html">pdf:to
+											be appear</a>][<a href="index.html">video:to be appear</a>][<a
+											href="index.html">project page:to be appear</a>]</span>
+								</span>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-2" id="cloudet" style="margin-top: 5rem;"">
+					<div class="col-md-4">
+						<div class="item">
+							<a href="https://arxiv.org/pdf/1907.13187.pdf">
+								<img class="img-thumbnail" src="images/cloudet.png">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-8">
+						<div class="desc">
+							<p>
+								<span class="pub_title">CloudDet: Interactive Visual Analysis of Anomalous
+									Performances
+									in Cloud Computing Systems</span>
+								<br>
+								<span class="pub_authors">Ke Xu, Yun Wang, <span class="pub_me">Leni Yang</span>,
+									Yifang
+									Wang, Bo Qiao, Si Qin, Yong Xu, Haidong Zhang, Huamin Qu</span>
+								<br>
+								<span class="pub_type"><span class="label label-default">TVCG</span> <span
+										class="pub_type"><span class="label label-default">VAST</span> IEEE
+										Transactions
+										on Visualization and Computer Graphics (IEEE Vis2019)</span>
+									<br>
+									<span class="pub_downloads" id="moocad_pre">Download: [<a
+											href="https://arxiv.org/pdf/1907.13187.pdf">pdf</a>][<a
+											href="https://youtu.be/NChvp-0SbIc">video</a>]</span>
+								</span>
+							</p>
 						</div>
 					</div>
 				</div>
@@ -126,65 +208,32 @@
 						</div>
 					</div>
 					<div class="row" id="project-pulse">
-						<div class="col-md-5 project-img">
+						<div class="col-md-4 project-img">
 							<div class="item">
-							<a href="http://vis.cse.ust.hk/groups/pulse/">
-							<img class="img-responsive rounded img-thumbnail" src="images/project-pulse.jpg">
-						    </a>
+								<a href="http://vis.cse.ust.hk/groups/pulse/">
+									<img class="img-thumbnail" src="images/project-pulse.png">
+								</a>
 							</div>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-8">
 							<div class="desc">
 								<p>
-								<a href="http://vis.cse.ust.hk/groups/pulse/" class="btn btn-primary btn-outline">Pulse of HKUST</a>
-								</br>
-								Pulse of HKUST aims to promote a smart campus which supports effective and smart decision-makings through the combined power of IoT devices, big data, and AI.
-							    </br>
-								<span class="footer-news">
-								Recent News: Our project won the Student Innovation Gold Award, Hong Kong ICT Awards 2019 and was exhibited at the HKTDC International ICT Expo 2019.
-								</span>
-							    </p>
-						    </div>
-					    </div>
-				    </div>
-			    </div>
-		    </div>
-		</div>
-		<div id="publication">
-				<div class="container">
-					<div class="row text-center">
-						<h2 class="bold">Publication</h2>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="rotate">
-								<h2 class="heading">Publication</h2>
-							</div>
-						</div>
-						<div class="row" id="cloudet">
-							<div class="col-md-5 project-img">
-								<div class="item">
-								<a href="https://arxiv.org/pdf/1907.13187.pdf">
-								<img class="img-responsive rounded img-thumbnail" src="images/cloudet.png">
-								</a>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="desc">
-									<p>
-										<span class="pub_title">CloudDet: Interactive Visual Analysis of Anomalous Performances in<br> Cloud Computing Systems</span>
-										<br>
-										<span class="pub_authors">Ke Xu, Yun Wang, <span class="pub_me">Leni Yang</span>, Yifang Wang, Bo Qiao, Si Qin, Yong Xu, Haidong Zhang, Huamin Qu</span>
-										<br>
-										<span class="pub_type"><span class="label label-default">TVCG</span> <span class="pub_type"><span class="label label-default">VAST</span> IEEE Transactions on Visualization and Computer Graphics, 2019</span>
-										<br>
-										<span class="pub_downloads" id="moocad_pre">Download: [<a href="https://arxiv.org/pdf/1907.13187.pdf">pdf</a>][<a href="https://youtu.be/NChvp-0SbIc">video</a>]</span>
-									</span></p>
-								</div>
+									<a href="http://vis.cse.ust.hk/groups/pulse/"
+										class="btn btn-primary btn-outline">Pulse of HKUST</a>
+									</br>
+									Pulse of HKUST aims to promote a smart campus which supports effective and smart
+									decision-makings through the combined power of IoT devices, big data, and AI.
+									</br>
+									<span class="footer-news">
+										Recent News: Our project won the Student Innovation Gold Award, Hong Kong ICT
+										Awards 2019 and was exhibited at the HKTDC International ICT Expo 2019.
+									</span>
+								</p>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
 		</div>
 		<div id="blog">
 			<div class="container">
@@ -228,9 +277,13 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								&copy;
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;
+								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
+								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
+									href="https://colorlib.com" target="_blank">Colorlib</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
 					</div>
@@ -238,8 +291,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</div>
 		</footer>
 
-	
-	
+
+
 	</div>
 
 	<!-- jQuery -->
@@ -259,5 +312,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
