--- a/index.html
+++ b/index.html
@@ -132,10 +132,64 @@
 						</div>
 					</div>
 				</div>
-				<div class="row mt-2" id="pyramid">
+
+				<div class="row mt-2" id="explaining">
 					<div class="col-md-4 col-xs-12">
 						<div class="item">
-							<a href="index.html">
+							<a href="https://arxiv.org/pdf/2112.12364.pdf">
+								<img class="img-thumbnail" src="images/explaining.png">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-8 col-xs-12">
+						<div class="desc">
+							<p>
+								<span class="pub_title">Explaining with Examples: Lessons Learned
+									from Crowdsourced Introductory Description of
+									Information Visualizations</span>
+								<br>
+								<span class="pub_authors"><span class="pub_me">Leni Yang</span>, Cindy Xiong, Jason K. Wong, Aoyu Wu, Huamin Qu</span>
+								<br>
+								<span class="pub_type"><span class="label label-default">TVCG</span> <span
+										class="pub_type">IEEE Transactions on Visualization and Computer Graphics</span>
+									<br>
+									<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://arxiv.org/pdf/2112.12364.pdf">pdf</a>][<a href="index.html">video: will give a talk at IEEE VIS2022</a>][<a
+											href="https://osf.io/asvt6/?view_only=559eb881e3f640aa984d0ca8ad593d0a">osf page</a>]</span>
+								</span>
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-2" id="opening" style="margin-top: 5rem;">
+					<div class="col-md-4 col-xs-12">
+						<div class="item">
+							<a href="https://arxiv.org/pdf/2202.02709.pdf">
+								<img class="img-thumbnail" src="images/opening.png">
+							</a>
+						</div>
+					</div>
+					<div class="col-md-8 col-xs-12">
+						<div class="desc">
+							<p>
+								<span class="pub_title">From Wow to Why: Guidelines for Creating the Opening of a Data Video
+									with Cinematic Styles</span>
+								<br>
+								<span class="pub_authors">Xian Xu, <span class="pub_me">Leni Yang</span>, David Yip, Mingming Fan, Zheng Wei, Huamin Qu</span>
+								<br>
+								<span class="pub_type"><span class="label label-default">CHI</span> In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI 2022)</span>
+									<br>
+									<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://arxiv.org/pdf/2202.02709.pdf">pdf</a>][<a href="https://www.youtube.com/watch?v=h30FWTTkQP4">video</a>]
+								</span>
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="row mt-2" id="pyramid" style="margin-top: 5rem;">
+					<div class="col-md-4 col-xs-12">
+						<div class="item">
+							<a href="https://idvxlab.com/papers/2021VIS_Pyramid_Yang.pdf">
 								<img class="img-thumbnail" src="images/freytag-space.png">
 							</a>
 						</div>
@@ -154,15 +208,15 @@
 										class="pub_type"><span class="label label-default">InfoVis</span> IEEE
 										Transactions on Visualization and Computer Graphics (IEEE Vis2021)</span>
 									<br>
-									<span class="pub_downloads" id="moocad_pre">Download: [<a href="index.html">pdf:to
-											be appear</a>][<a href="index.html">video:to be appear</a>][<a
-											href="index.html">project page:to be appear</a>]</span>
+									<span class="pub_downloads" id="moocad_pre">Material: [<a href="https://idvxlab.com/papers/2021VIS_Pyramid_Yang.pdf">pdf</a>][<a href="https://youtu.be/mkZDFyOXxa8">video</a>][<a
+											href="https://pyramidstory.idvxlab.com/">project page</a>]</span>
 								</span>
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="row mt-2" id="cloudet" style="margin-top: 5rem;"">
+
+				<div class="row mt-2" id="cloudet" style="margin-top: 5rem;">
 					<div class="col-md-4">
 						<div class="item">
 							<a href="https://arxiv.org/pdf/1907.13187.pdf">
@@ -186,7 +240,7 @@
 										Transactions
 										on Visualization and Computer Graphics (IEEE Vis2019)</span>
 									<br>
-									<span class="pub_downloads" id="moocad_pre">Download: [<a
+									<span class="pub_downloads" id="moocad_pre">Material: [<a
 											href="https://arxiv.org/pdf/1907.13187.pdf">pdf</a>][<a
 											href="https://youtu.be/NChvp-0SbIc">video</a>]</span>
 								</span>
